k8s/ecommerce-api.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ecommerce-api-ingress
  labels:
    app: ecommerce-api-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: ecommerce-api-service
              servicePort: 80
